--- a/index.html
+++ b/index.html
@@ -441,6 +441,8 @@ Error message and password prompt
 
 <li>פה</li>
 
+<li>פוליטיקאי</li>
+
 <li>פועה</li>
 
 <li>פחזניות ממולאות בכבד קצוץ</li>
@@ -8322,7 +8324,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[המשק האוטרקי שלנו]] הקליניקה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[דינה ז&quot;ל]] [[דןדן נסע]] [[האחיות כהן]] פוליטיקאי [[איתן וג'ואל כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8645,12 +8647,12 @@ Error message and password prompt
 
 איריס בתה של אווה, היא ילדה זרחנית. זורחת באור ובחושך.</pre>
 </div>
-<div created="20170415200315789" modified="20170415201819170" tags="[[אחיות חוץ]]" title="איתן וג'ואל כהן">
+<div created="20170415200315789" modified="20170419210535156" tags="[[אחיות חוץ]]" title="איתן וג'ואל כהן">
 <pre>[img[pictures/cohen-brothers.jpg]]
 
 !!![[גורה]]:
 
-  [[האחים איתן וג'ואל כהן|https://he.wikipedia.org/wiki/%D7%94%D7%90%D7%97%D7%99%D7%9D_%D7%9B%D7%94%D7%9F]], שיויו אימץ בתחילת שנות האלפיים, והפך לאחותם - אווה כהן, שהיא קונדיטורית הונגריה.
+  [[האחים איתן וג'ואל כהן|https://he.wikipedia.org/wiki/%D7%94%D7%90%D7%97%D7%99%D7%9D_%D7%9B%D7%94%D7%9F]], שיויו אימץ בתחילת שנות האלפיים, והפך אותם לאחיו, ואת עצמו לאווה כהן, אחותם - שהיא קונדיטורית הונגריה.
 
 
 
@@ -9009,18 +9011,18 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170415105944150" modified="20170415111734013" title="דינה ז&quot;ל">
+<div created="20170415105944150" modified="20170419210828038" title="דינה ז&quot;ל">
 <pre>[img[pictures/ima-shel-gura.jpg]]
 
 !!![[גורה]]:
 
-ככה אימא שלנו, של יויו ושלי, הייתה מבלה את רוב שעותיה, יושבת על כסא הנדנדה במרפסת וקוראת, ומידי פעם רוטנת או קוראת לנו ואומרת לנו מה צריך לעשות ומרבה בנזיפות. 
+ככה אימא שלנו, של יויו ושלי, הייתה מבלה את רוב שעותיה, יושבת על כסא הנדנדה במרפסת וקוראת, ומידי פעם רוטנת או קוראת לנו ואומרת לנו מה צריך לעשות, ומרבה בנזיפות. 
 
 היא נפטרה כשכבר שנינו היינו בפריז, כבר אחרי התאונה שלי.
 
-גידלו אותנו ממושמעים, ומעולם לא העזנו לסרב לדרישותיה של אימי כל עוד גרתי בבית.
+גידלו אותנו ממושמעים, ומעולם לא העזנו לסרב לדרישותיה של אימי כל עוד גרתי בבית הורינו.
 
-כשהתגייסתי ויצאתי מן הבית, והתחלתי להכיר אנשים ולשמוע סיפורים ואמירות הנוגעות להורים התחיל לבעבע בי כעס, וגם היום יש לי התפרצויות של זעם שיכול לעלות בשניה בגלל שטות.
+כשהתגייסתי ויצאתי מן הבית, והתחלתי להכיר אנשים ולשמוע סיפורים ואמירות הנוגעות להורים, התחיל לבעבע בי כעס, וגם היום יש לי התפרצויות של זעם שיכול לעלות בשניה בגלל שטות.
 
 כשזה קורה משתנה לי הקול ושפת הדיבור שלי משתנה. אני צועקת ומדברת לא יפה.
 
@@ -9049,7 +9051,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170112183255462" modified="20170417222616399" title="דןדן נסע">
+<div created="20170112183255462" modified="20170419212303304" title="דןדן נסע">
 <pre>[img[pictures/dandan-nasa.jpg]]
 
 !!![[אירי]]:
@@ -9066,8 +9068,8 @@ Error message and password prompt
 
 אני ראשית מבקש סליחה מגורה במיוחד, ומכל אחד ואחד מכם, על כך שלא הייתי אתכם בשום קשר בחודשיים וחצי האחרונים. כבר כמה ימים שאני כותב את המכתב הזה ואני רוצה להסביר את עצמי:
 
-הגעתי לאל איי, ודוֹדי מוֹ חכה לי בשדה התעופה. הוא לקח אותי לסבתי בת ה-90 שמתגוררת בבית אבות אלגנטי בסנטר של אל-איי. סבתי היא אישה מרושעת ועשירה אך היא אוהבת אותי ונחמדה אלי יותר מאשר לכל אחד אחר. לאורך השנים היא ניסתה לחבל בכל ניסיון של אמי לתפקד, אך כעת לא הייתה לה ברירה והיא נאלצה לצאת מעצמה ולהתעניין בבתה, כי לאמי מצאו סרטן בכל הגוף והיא כבר הייתה במצב סופני והיה צריך להביע תמיכה. הרופאים טענו כי נותרו לאמי לכל היותר ארבעה-חמישה שבועות לחיות, ומוֹ ביקש מאמם כי תאפשר לה את התנאים הטובים ביותר כמתנת פרידה. דודי הוא אדם אמיד ונדיב אך הוא חשב שאמם צריכה להעניק את הדבר הזה לאמי היקרה שסבלה ממנה כל חייה. הוא לא העז לומר לה ישירות שהיא השתלטה על כספה של אימא, אך הוא לחץ. זה לא היה פשוט, כי אם יש משהו שסבתי קשורה אליו רגשית נפשית כל כולה הוא ממונה. הוא מקור תחושת העליונות והשליטה שלה. היא התעללה באמי, שהייתה בשל כך, ילדה ונערה פצועה, ובגרה להיות אישה פצועה עד יומה האחרון. אמי גם היא דפקה אותי כהוגן ואת זה אתם יודעים, אך מגיל צעיר הבנתי אותה על התנהגותה ואורחות חייה. מגיל צעיר מאד אמי שכבה עם טריליון גברים וצרכה הרבה מאד סמים והסתובבה בהרבה מאד מקומות. לאורך השנים אושפזה מספר פעמים במוסדות לבריאות הנפש, וגם אחרי שהולידה אותי המשיכה אמי לנהוג כפי שהייתה רגילה. כן, נולדתי עם גוף מפורק ועברתי הרבה ניתוחים והיטלטלתי בין אבי לבין אמי לבין פנימיות עד שנפלטתי מהמערכת בכתה ט'. אך בין אם היו לאמי חשק, כוח או יכולת, ובין אם לאו, היא תמיד רצתה אותי. אבי נפטר כשהייתי בן 15 וחצי. הייתי ילד רחוב וסוחר סמים ונווד צווארון לבן עד לא כל כך מזמן. כשסיימנו את הביקור אצל סבתא, מו לקח אותי לאימא, ששהתה בסנטוריום רחב ידיים ששכן על הגבעות המזרחיות לכביש מספר 1, מרחק שעה נסיעה צפונה מאל איי. מו, מוזס, הדוד שלי – תמיד היה האדם האנושי ביותר והשפוי ביותר במשפחתי העקומה. הוא לא דומה לאף אחד. הוא צעיר מאמי בשבע שנים, ובניגוד לאמי – שסבתא לא סבלה לרגע מעולם, בו היא הייתה מאוהבת. תופעה אנושית מוכרת. היה לי נעים לפגוש את דוד מו. שמענו מוסיקה בנסיעה ודיברנו, וכמובן שהיה לו עשב נקי. הגענו לאימא שהתגוררה בחדר ענקי עם חלונות גדולים שפונים לחורש עוצר נשימה. גרתי אתה בחדרה שלושה שבועות עד שב-14 ביולי נפחה את נשמתה. ממש ראיתי כשבאחת פלטה את נשמתה האחרונה. זה היה רגע מוזר. החדרים במקום תוכננו כך שהחולים יוכלו לבלות עם יקיריהם בימיהם האחרונים. אלה היו שלושה שבועות רגשיים מאד, והייתי חזק, וחשבתי שזה נהדר שאנחנו נפרדים ככה. טיפלתי באימה, שהייתה שבר כלי מטושטש עם כאבי תופת, ולב מיוסר. ההוספיס המיוחד במינו הזה, בנוי מעץ חום כהה במבנה של ספירלה עולה, ונפתחת, שמתוכה יוצאים חדרי ענק הפונים החוצה אל הנוף, כמו פריסקופים על שיח מטפס. מחלונותיהם ניבטים עצי ענק יפהפיים שבלילה מוארים באור שקט וענוג. בעיקר בלילות הרגשתי כמו על מתקן דומם בלונה פארק, ודימיתי איך אני מתחבר לאינסוף כמו שאירי לימדה אותי. כיביתי את הנייד ולא השתמשתי במחשב. רציתי להיות עם אימא בלבד. מו הגיע לבקר כל כמה ימים, ופעמיים הביא לביקור את סבתא בכיסא גלגלים. החדר כלל את המיטה שלה, שהייתה גדולה ונוחה ופנתה אל החלון. סמוך אליה ניצבה כורסה נוחה ירוקה ושולחן קטן. הייתה בו גם פינת ישיבה, טלוויזיה מחוברת לכבלים, חדר אמבטיה ועוד פינת שינה נעימה בה ישנתי אני. אני יודע שזה לא בסדר שלא כתבתי לכם כלום ואני בוש בעצמי. במשך הימים נשאבתי לטיפול באימא וכל כולי הייתי עסוק בלהביט בה, לדבר אליה, לקרוא לה ספרים ועיתונים, להביא לה ולי אוכל מחדר האוכל ולהאכיל אותה ולאכול בעצמי. היא דיברה מעט, ובימים האחרונים היא הייתה מטושטשת כבר רוב הזמן אך היו לנו כמה שיחות יפות. אפשר להגיד שלפני שבוע התעוררתי מהמאורע הזה. אחרי שאימא נפטרה וגופתה נשרפה, מו ואני פיזרנו את אפרה סביב העצים שמתחת לחלון בו בילתה את ימיה האחרונים, ואחר כך עצרנו בבר הראשון שהיה בדרך חזרה לאל איי, ושתינו את עצמנו לדעת. מאותו הרגע ועד לפני שבוע הייתי שיכור תחת ומסטול מוות  24/7 פחות או יותר. המזל הגדול שלי הוא שסבי, אביה היקר שאהב אותה מאד חילק בצוואתו את ממונו ורכושו. לסבתי הוריש מחצית מהכול ולאמי ולדודי את החצי השני, אך סבתי השתלטה על הרבע של אמי באחד מאשפוזיה וכעת הפכתי ליורשה היחיד של אמי, ולמזלי שליטתה בכסף הזה לא חלה עלי – יורשו. כשסבתי תלך לעולמה אחווה סיבוב נוסף, מאחר שבצוואתו ציווה סבי על סבתי אותה הכיר היטב, להוריש את רכושה וממונה לבתה ולבנה בלבד ובאופן שווה.       
-בכל אופן זה לא העניין ואולי זה קשור. העניין הוא שחזרתי לסורי למשך קצת פחות מחודשיים בהם לנתי בדירה קטנה בתוך מלון דירות קטן, ששכרתי ברגע שהגענו לאל איי. ברוב היום הסרחתי מסטול במיטה וראיתי טלוויזיה. פה ושם הלכתי להשיג סמים ואוכל ולבקר את סבתי. את הטלפון הנייד כיביתי כמעט כל הזמן, ולפני עשרה ימים מו הגיע לכאן לאחר שהחליט שלא ייתן לי ליפול, וסחב אותי לביתו ומכאן אני כותב לכם. הוא גר בבית דירות הממוקם במרכז העיר גם כן. הדירה שלו גדולה ונוחה, והוא עבר אליה לאחר שהתגרש לפני שנתיים. בנו ובתו כבר בקולג', והוא לגמרי חופשי. במרכז הדירה יש מטבח גדול, ובו בר זכוכית עליו מפוזרים ארבעה מחשבים. מסכי פלזמה תלויים מעל ומקרינים במקביל כל מה שמעניין אותו לדעת. הרבה בורסה בשעות היום, וכאן הוא חי, ומכאן הוא עובד כמשקיע הון סיכון. גם הוא לא יוצא כמעט מהבית. כל צרכיו מגיעים עד דלתו, את רוב פגישותיו הוא מקיים בתווכם של מסכים, ואני חושב שאתם תאהבו אותו. אני מביט בו עכשיו וחושב על זה שהייתם אוהבים אותו.
+הגעתי לאל איי, ודוֹדי מוֹ חכה לי בשדה התעופה. הוא לקח אותי לסבתי בת ה-90 שמתגוררת בבית אבות אלגנטי בסנטר של אל-איי. סבתי היא אישה מרושעת ועשירה אך היא אוהבת אותי ונחמדה אלי יותר מאשר לכל אחד אחר. לאורך השנים היא ניסתה לחבל בכל ניסיון של אמי לתפקד, אך כעת לא הייתה לה ברירה והיא נאלצה לצאת מעצמה ולהתעניין בבתה, כי לאמי מצאו סרטן בכל הגוף והיא כבר הייתה במצב סופני והיה צריך להביע תמיכה. הרופאים טענו כי נותרו לאמי לכל היותר ארבעה-חמישה שבועות לחיות, ומוֹ ביקש מאמם כי תאפשר לה את התנאים הטובים ביותר כמתנת פרידה. דודי הוא אדם אמיד ונדיב אך הוא חשב שאמם צריכה להעניק את הדבר הזה לאמי היקרה שסבלה ממנה כל חייה. הוא לא העז לומר לה ישירות שהיא השתלטה על כספה של אימא, אך הוא לחץ. זה לא היה פשוט, כי אם יש משהו שסבתי קשורה אליו רגשית נפשית כל כולה הוא ממונה. הוא מקור תחושת העליונות והשליטה שלה. היא התעללה באמי, שהייתה בשל כך, ילדה ונערה פצועה, ובגרה להיות אישה פצועה עד יומה האחרון. אמי גם היא דפקה אותי כהוגן ואת זה אתם יודעים, אך מגיל צעיר הבנתי אותה על התנהגותה ואורחות חייה. מגיל צעיר מאד אמי שכבה עם טריליון גברים וצרכה הרבה מאד סמים והסתובבה בהרבה מאד מקומות. לאורך השנים אושפזה מספר פעמים במוסדות לבריאות הנפש, וגם אחרי שהולידה אותי המשיכה אמי לנהוג כפי שהייתה רגילה. כן, נולדתי עם גוף מפורק ועברתי הרבה ניתוחים והיטלטלתי בין אבי לבין אמי לבין פנימיות עד שנפלטתי מהמערכת בכתה ט'. אך בין אם היו לאמי חשק, כוח או יכולת, ובין אם לאו, היא תמיד רצתה אותי. אבי נפטר כשהייתי בן 15 וחצי. הייתי ילד רחוב וסוחר סמים ונווד צווארון לבן עד לא כל כך מזמן. כשסיימנו את הביקור אצל סבתא, מו לקח אותי לאימא, ששהתה בסנטוריום רחב ידיים ששכן על הגבעות המזרחיות לכביש מספר 1, מרחק שעה נסיעה צפונה מאל איי. מו, מוזס, הדוד שלי – תמיד היה האדם האנושי ביותר והשפוי ביותר במשפחתי העקומה. הוא לא דומה לאף אחד. הוא צעיר מאמי בשבע שנים, ובניגוד לאמי – שסבתא לא סבלה לרגע מעולם, בו היא הייתה מאוהבת. תופעה אנושית מוכרת. היה לי נעים לפגוש את דוד מו. שמענו מוסיקה בנסיעה ודיברנו, וכמובן שהיה לו עשב נקי. הגענו לאימא שהתגוררה בחדר ענקי עם חלונות גדולים שפונים לחורש עוצר נשימה. גרתי אתה בחדרה שלושה שבועות עד שב-14 ביולי נפחה את נשימתה. ממש ראיתי כשבאחת פלטה את נשמתה האחרונה. זה היה רגע מוזר. החדרים במקום תוכננו כך שהחולים יוכלו לבלות עם יקיריהם בימיהם האחרונים. אלה היו שלושה שבועות רגשיים מאד, והייתי חזק, וחשבתי שזה נהדר שאנחנו נפרדים ככה. טיפלתי באימה, שהייתה שבר כלי מטושטש עם כאבי תופת, ולב מיוסר. ההוספיס המיוחד במינו הזה, בנוי מעץ חום כהה במבנה של ספירלה עולה, ונפתחת, שמתוכה יוצאים חדרי ענק הפונים החוצה אל הנוף, כמו פריסקופים על שיח מטפס. מחלונותיהם ניבטים עצי ענק יפהפיים שבלילה מוארים באור שקט וענוג. בעיקר בלילות הרגשתי כמו על מתקן דומם בלונה פארק, ודימיתי איך אני מתחבר לאינסוף כמו שאירי לימדה אותי. כיביתי את הנייד ולא השתמשתי במחשב. רציתי להיות עם אימא בלבד. מו הגיע לבקר כל כמה ימים, ופעמיים הביא לביקור את סבתא בכיסא גלגלים. החדר כלל את המיטה שלה, שהייתה גדולה ונוחה ופנתה אל החלון. סמוך אליה ניצבה כורסה נוחה ירוקה ושולחן קטן. הייתה בו גם פינת ישיבה, טלוויזיה מחוברת לכבלים, חדר אמבטיה ועוד פינת שינה נעימה בה ישנתי אני. אני יודע שזה לא בסדר שלא כתבתי לכם כלום ואני בוש בעצמי. במשך הימים נשאבתי לטיפול באימא וכל כולי הייתי עסוק בלהביט בה, לדבר אליה, לקרוא לה ספרים ועיתונים, להביא לה ולי אוכל מחדר האוכל ולהאכיל אותה ולאכול בעצמי. היא דיברה מעט, ובימים האחרונים היא הייתה מטושטשת כבר רוב הזמן אך היו לנו כמה שיחות יפות. אפשר להגיד שלפני שבוע התעוררתי מהמאורע הזה. אחרי שאימא נפטרה וגופתה נשרפה, מו ואני פיזרנו את אפרה סביב העצים שמתחת לחלון בו בילתה את ימיה האחרונים, ואחר כך עצרנו בבר הראשון שהיה בדרך חזרה לאל איי, ושתינו את עצמנו לדעת. מאותו הרגע ועד לפני שבוע הייתי שיכור תחת ומסטול מוות  24/7 פחות או יותר. המזל הגדול שלי הוא שסבי, אביה היקר שאהב אותה מאד חילק בצוואתו את ממונו ורכושו. לסבתי הוריש מחצית מהכול ולאמי ולדודי את החצי השני, אך סבתי השתלטה על הרבע של אמי באחד מאשפוזיה וכעת הפכתי ליורשה היחיד של אמי, ולמזלי שליטתה בכסף הזה לא חלה עלי – יורשו. כשסבתי תלך לעולמה אחווה סיבוב נוסף, מאחר שבצוואתו ציווה סבי על סבתי אותה הכיר היטב, להוריש את רכושה וממונה לבתה ולבנה בלבד ובאופן שווה.       
+בכל אופן זה לא העניין ואולי זה קשור. העניין הוא שחזרתי לסורי למשך קצת פחות מחודשיים בהם לנתי בדירה קטנה בתוך מלון דירות קטן, ששכרתי ברגע שהגענו לאל איי. ברוב היום הסרחתי מסטול במיטה וראיתי טלוויזיה. פה ושם הלכתי להשיג סמים ואוכל ולבקר את סבתי. את הטלפון הנייד כיביתי כמעט כל הזמן, ולפני עשרה ימים מו הגיע לכאן לאחר שהחליט שלא ייתן לי ליפול, וסחב אותי לביתו ומכאן אני כותב לכם. הוא גר בבית דירות הממוקם במרכז העיר גם כן. הדירה שלו גדולה ונוחה, והוא עבר אליה לאחר שהתגרש לפני שנתיים. בנו ובתו כבר בקולג', והוא לגמרי חופשי. במרכז הדירה יש מטבח גדול, ובו שולחן-בר עשוי זכוכית, עליו מפוזרים ארבעה מחשבים. מסכי פלזמה תלויים מעל ומקרינים במקביל כל מה שמעניין אותו לדעת. הרבה בורסה בשעות היום, וכאן הוא חי, ומכאן הוא עובד כמשקיע הון סיכון. גם הוא לא יוצא כמעט מהבית. כל צרכיו מגיעים עד דלתו, את רוב פגישותיו הוא מקיים בתווכם של מסכים, ואני חושב שאתם תאהבו אותו. אני מביט בו עכשיו וחושב על זה שהייתם אוהבים אותו.
 ועכשיו לחלק הקשה כי מו אינו מרפה. 
 אני לא כתבתי לכם, כי לא יכולתי לכתוב לכם והרגשתי אשם שאני לא כותב לכם, אך הערפול עזר לי להשכיח את רגשות האשם. אני אוהב אותך גורה, ואני אוהב את כולכם, אבל בהתחלה, כשאימא עוד הייתה בחיים חשבתי שאני לא כותב לכם, בגלל שאני רוצה כל כולי להיות אתה, והרבה בזכותכם רציתי לתת לה את כל כולי. רציתי להיות טוב כשחשבתי עליכם. רק לאחר שהיא נפטרה, ומצאתי את עצמי במיטה מרחם על עצמי, הבנתי שאני מפחד לדבר אתכם, כי אני מפחד להגיד, לך גורה בעיקר - אבל לכולכם, שאני רוצה להיות לבד. יש לי אהבה לכל אחד ואחד מכם ואתם החברים הכי טובים שיהיו או היו לי אי פעם, והאנשים הכי נפלאים ומהנים, ואני לא יודע מה לעשות עם עצמי, כי אינני רוצה לפעול מתוך תחושת חובה או אשמה. אני רוצה להסריח במיטה בלי להצטרך להיות טוב, בלי לעשות כלום בבקר, בלי שעון מעורר, בלי בית נקי, בלי עבודה, בלי שאיפות. להיות סרחן עצלן. למזלי מוֹ התעקש ולקח אותי בכוח, כי כמויות האלכוהול ששתיתי הן קטלניות. אני יודע שאני ילד בן 22, אבל אני שייך לאותם ילדים שנאלצו להתבגר מוקדם, ואולי לכן אני כל כך לא רוצה להיות מבוגר. מוזס הזמין לי לכאן בימים האלה כל יום מטפל מסוג אחר, כולל שיחות עם פסיכולוגית שמאד עוזרת לי. אני מתגעגע אלייך גורה, ואני מתגעגע מאד אל כולכם ורוצה לשמוע אתכם, אבל אני לא מסוגל לדבר אתכם עכשיו. אני מאד רוצה להיות כן, כי מי אם לא אתם ראוי לכנות. אני סיפרתי עליכם לסוזי המטפלת. סיפרתי לה המון על גורה ועל כולכם, והיא כמובן מעודדת אותי לחזור אליכם. היא אפילו הציע שאסע ונדבר שוב על מי אני ומה אני אתכם ועבורכם, אך משהו מוזר עובר על הגוף שלי והוא אינו מסוגל לקבל את המחשבה הזו. כלומר, בכל פעם שאני חושב על חזרה לפריז, גופי העקום מתקשח כמטיל וטו. אני מעט מאובן גם עכשיו. אני יושב עם הדוד מו סביב שולחן העבודה שלו ומסיים את המכתב. 
 אוהב את כולכם ומבקש סליחה,
@@ -9112,7 +9114,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161111215423587" modified="20170412174526164" title="האחיות כהן">
+<div created="20161111215423587" modified="20170419212342511" title="האחיות כהן">
 <pre>[img[pictures/K86u1tbSHje03L3Y.jpg]]
 
 
@@ -9125,7 +9127,7 @@ Error message and password prompt
 
 כדברי פתיחה, אני מעתיק לכאן את הקטע בו אווה מתארת אותי עומד שם ונואם בפני חברי ב[[כוכב המשאלות בעל תשע הצלעות]]:
 
-לפני די הרבה שנים, 13-14 שנים, הייתה לי כזו... תקופה. הייתי סטלן אימים, וללא קשר, תמיד אהבתי להמציא. אחד מהדברים שהמצאתי אז הוא, שאני אישה הונגריה בסיסית, ששמה [[אווה כהן]], ובעצם מבחינתי הייתי אחותם של האחים [[איתן וג'ואל כהן|https://en.wikipedia.org/wiki/Coen_brothers]], למרות שבכלל יואל הוא שם אבי ובכלל אין לי אחים כי אם ארבע אחיות, ממש כמו ל[[דוקטור דרק שפרד|https://en.wikipedia.org/wiki/Derek_Shepherd#/media/File:Dr._Derek_Shepherd.jpgD7.AA_.D7.91.D7.A1.D7.93.D7.A8.D7.94]]. הרעיון נשאר אתי והמשיך להתפתח, ועם הזמן החלטתי, שאני רוצה להקים קבוצת יצירה ליוצרים בלתי תלויים זה בזה אך קשורים זה לזה ושמה ''האחיות כהן''. שיתפתי בזה את [[גורה]] אחותי הקטנה והיפה. גורה ואני ישבנו ימים ולילות רבים, ופתחנו את האג'נדה והדמויות, את הקונספט והדרמה. כתבנו [[תשתית לסדרה|HH]] בת שמונה פרקים על האחיות עם אפשרות להמשך.. ולמה אני מספר לכם את זה? כי כשהגעתי לדירה כבר הבנתי שזהו מתקן השיגור של האחיות, ולכן בניתי את [[המעבדה]] בחדר השינה שלי. ועכשיו לדבר עצמו. אני מזמין כל אחד ואחת מכם להצטרף לחבורה. תנאי בסיסי לכניסת מיזם לתחומי האחיות הוא ש-[[שרלה הייתה אוהבת את זה]]. מי זו שרלה? שרלה היא אישה שנפטרה מסרטן במח, כמו ש[[מאיר אריאל]] מספר בסרט [[מסע הבחירות של מאיר אריאל|https://www.youtube.com/watch?v=yFXUEoXCkT8]],  (5:30 דקות מתחילת הסרט), על האישה שנלקחה צעירה והיה לה ראש מאד מעניין והלוואי והיא הייתה המורה לספרות שלו. הוא מספר על צחוקיה המשגעים והחכמים ביותר ועל הצורך שחש לכתוב לה משהו של פרידה ביום השלושים לפטירתה, משהו כמו שיר אהבה למורתו שאף היה מבקש ממנה ציון עליו. ומי מחליט אם שרלה שהלכה לעולמה הייתה [[אוהבת|אהבה]] את זה או לא? הדבר התמים שאני שואף אליו הוא שלעולם לא אצטרך לנהוג כפוליטיקאי או מי מחברי האחיות, כי אני בטוח שאת זה שרלה לא הייתה אוהבת. 
+לפני די הרבה שנים, 13-14 שנים, הייתה לי כזו... תקופה. הייתי סטלן אימים, וללא קשר, תמיד אהבתי להמציא. אחד מהדברים שהמצאתי אז הוא, שאני אישה הונגריה בסיסית, ששמה [[אווה כהן]], ובעצם מבחינתי הייתי אחותם של האחים [[איתן ויואל כהן|איתן וג'ואל כהן]], למרות שבכלל יואל הוא שם אבי ובכלל אין לי אחים כי אם ארבע אחיות, ממש כמו ל[[דוקטור דרק שפרד|https://en.wikipedia.org/wiki/Derek_Shepherd#/media/File:Dr._Derek_Shepherd.jpgD7.AA_.D7.91.D7.A1.D7.93.D7.A8.D7.94]]. הרעיון נשאר אתי והמשיך להתפתח, ועם הזמן החלטתי, שאני רוצה להקים קבוצת יצירה ליוצרים בלתי תלויים זה בזה אך קשורים זה לזה ושמה ''האחיות כהן''. שיתפתי בזה את [[גורה]] אחותי הקטנה והיפה. גורה ואני ישבנו ימים ולילות רבים, ופתחנו את האג'נדה והדמויות, את הקונספט והדרמה. כתבנו [[תשתית לסדרה|HH]] בת שמונה פרקים על האחיות עם אפשרות להמשך.. ולמה אני מספר לכם את זה? כי כשהגעתי לדירה כבר הבנתי שזהו מתקן השיגור של האחיות, ולכן בניתי את [[המעבדה]] בחדר השינה שלי. ועכשיו לדבר עצמו. אני מזמין כל אחד ואחת מכם להצטרף לחבורה. תנאי בסיסי לכניסת מיזם לתחומי האחיות הוא ש-[[שרלה הייתה אוהבת את זה]]. מי זו שרלה? שרלה היא אישה שנפטרה מסרטן במח, כמו ש[[מאיר אריאל]] מספר בסרט [[מסע הבחירות של מאיר אריאל|https://www.youtube.com/watch?v=yFXUEoXCkT8]],  (5:30 דקות מתחילת הסרט), על האישה שנלקחה צעירה והיה לה ראש מאד מעניין והלוואי והיא הייתה המורה לספרות שלו. הוא מספר על צחוקיה המשגעים והחכמים ביותר ועל הצורך שחש לכתוב לה משהו של פרידה ביום השלושים לפטירתה, משהו כמו שיר אהבה למורתו שאף היה מבקש ממנה ציון עליו. ומי מחליט אם שרלה שהלכה לעולמה הייתה [[אוהבת|אהבה]] את זה או לא? הדבר התמים שאני שואף אליו הוא שלעולם לא אצטרך לנהוג [[כפוליטיקאי|פוליטיקאי]] או מי מחברי האחיות, כי אני בטוח שאת זה שרלה לא הייתה אוהבת. 
 
 או כמו שגורה ואני כתבנו בשעתו, כשגרתי [[בין האלונים|המעבדה]].
 
@@ -10033,14 +10035,28 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170328175210280" modified="20170416220935035" tags="[[אחיות חוץ]]" title="מאיר אריאל">
+<div created="20170328175210280" modified="20170419204512413" tags="[[אחיות חוץ]]" title="מאיר אריאל">
 <pre>[img[pictures/0bBcnTVPP0ggEKv3.jpg]]
 
-לוקח לי אחר הצהריים חיובי נוסע לנמל
-לעצמי אני אומר בדרך שגם מזה עוד נצטרך להיגמל
-עצמי עונה לי בהגיענו אז נתחיל כל יום להתעמל 
 
-או במילים אחרות,  [[טרמינל לומינטל|https://www.youtube.com/watch?v=GME1UyUpMPU]].</pre>
+
+
+''לוקח לי אחר הצהריים חיובי נוסע לנמל''
+
+''
+לעצמי אני אומר בדרך שגם מזה עוד נצטרך להיגמל''
+
+''
+עצמי עונה לי בהגיענו אז נתחיל כל יום להתעמל ''
+
+כלומר:
+
+[[טרמינל לומינטל|https://www.youtube.com/watch?v=GME1UyUpMPU]].
+
+כלומר:
+
+[[מאיר אריאל  ז&quot;ל|https://he.wikipedia.org/wiki/%D7%9E%D7%90%D7%99%D7%A8_%D7%90%D7%A8%D7%99%D7%90%D7%9C]], 
+</pre>
 </div>
 <div created="20170402193858167" modified="20170404203721884" tags="[[מתכוני ארוחת הכריסמס]]" title="מג'דרה">
 <pre>[img[pictures/mejadra-matconim.jpg]]
@@ -11334,6 +11350,20 @@ __אופן ההכנה____
 </div>
 <div created="20170324140205427" modified="20170417190916651" tags="[[אחות כהן]]" title="פה">
 <pre>[img[pictures/zYSyawODRSpsQ3mx.jpg]]</pre>
+</div>
+<div created="20170419212629057" modified="20170419221016720" title="פוליטיקאי">
+<pre>
+
+[img[pictures/politician.jpg]]
+
+
+
+
+
+
+
+
+</pre>
 </div>
 <div created="20161215205302791" modified="20170127135712805" title="פועה">
 <pre>[img[https://i.imgur.com/ZynQAw1.jpg)]]
