--- a/index.html
+++ b/index.html
@@ -8324,7 +8324,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[דינה ז&quot;ל]] [[דןדן נסע]] [[האחיות כהן]] פוליטיקאי [[איתן וג'ואל כהן]]" title="$:/StoryList">
+<div list="פוליטיקאי [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11351,13 +11351,16 @@ __אופן ההכנה____
 <div created="20170324140205427" modified="20170417190916651" tags="[[אחות כהן]]" title="פה">
 <pre>[img[pictures/zYSyawODRSpsQ3mx.jpg]]</pre>
 </div>
-<div created="20170419212629057" modified="20170419221016720" title="פוליטיקאי">
+<div created="20170419212629057" modified="20170421140736044" title="פוליטיקאי">
 <pre>
-
 [img[pictures/politician.jpg]]
 
 
+!!![[גורה]]:
 
+נכון לרגע זה, היינו אומרים, שפוליטיקאי הוא:
+
+תאב שלטון
 
 
 
