מנקים היטב, חמאה, חלומות שחלמנו, מטריה אוטו, מפעיל יד, תיק גב, ירקות קלויים ותיקונים

--- a/index.html
+++ b/index.html
@@ -231,6 +231,10 @@ Error message and password prompt
 
 <li>אווה כהן</li>
 
+<li>אוטו מטריה</li>
+
+<li>אוכל</li>
+
 <li>אורז לבן עם צנוברים</li>
 
 <li>אחיות חוץ</li>
@@ -347,6 +351,10 @@ Error message and password prompt
 
 <li>חזרת</li>
 
+<li>חלומות שחלמנו</li>
+
+<li>חמאת שום ועשבי תיבול</li>
+
 <li>חמוצים סיניים</li>
 
 <li>טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן</li>
@@ -354,6 +362,8 @@ Error message and password prompt
 <li>יויו</li>
 
 <li>ים טתיס</li>
+
+<li>ירקות קלויים</li>
 
 <li>כוכב המשאלות בעל תשע הצלעות</li>
 
@@ -388,6 +398,8 @@ Error message and password prompt
 <li>מנקים היטב</li>
 
 <li>מערכת העיתון</li>
+
+<li>מפעיל יד</li>
 
 <li>מקלדת</li>
 
@@ -8230,7 +8242,7 @@ Error message and password prompt
 <pre>{
     &quot;tiddlers&quot;: {
         &quot;Untitled&quot;: {
-            &quot;text&quot;: &quot;data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2060%2030%22%20width%3D%221200%22%20height%3D%22600%22%3E%0A%3CclipPath%20id%3D%22t%22%3E%0A%09%3Cpath%20d%3D%22M30%2C15%20h30%20v15%20z%20v15%20h-30%20z%20h-30%20v-15%20z%20v-15%20h30%20z%22%2F%3E%0A%3C%2FclipPath%3E%0A%3Cpath%20d%3D%22M0%2C0%20v30%20h60%20v-30%20z%22%20fill%3D%22%2300247d%22%2F%3E%0A%3Cpath%20d%3D%22M0%2C0%20L60%2C30%20M60%2C0%20L0%2C30%22%20stroke%3D%22%23fff%22%20stroke-width%3D%226%22%2F%3E%0A%3Cpath%20d%3D%22M0%2C0%20L60%2C30%20M60%2C0%20L0%2C30%22%20clip-path%3D%22url(%23t)%22%20stroke%3D%22%23cf142b%22%20stroke-width%3D%224%22%2F%3E%0A%3Cpath%20d%3D%22M30%2C0%20v30%20M0%2C15%20h60%22%20stroke%3D%22%23fff%22%20stroke-width%3D%2210%22%2F%3E%0A%3Cpath%20d%3D%22M30%2C0%20v30%20M0%2C15%20h60%22%20stroke%3D%22%23cf142b%22%20stroke-width%3D%226%22%2F%3E%0A%3C%2Fsvg%3E%0A&quot;,
+            &quot;text&quot;: &quot; כל החומרים למעבד המזון עם להב הפלדה, ומפ&quot;,
             &quot;title&quot;: &quot;Untitled&quot;
         }
     }
@@ -8324,7 +8336,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="פוליטיקאי [[האחיות כהן]]" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8344,7 +8356,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170418222438934" title="$:/temp/search">
+<div created="20161023184814872" modified="20170422202455120" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8545,6 +8557,34 @@ Error message and password prompt
 קצרה היריעה מלספר על אווה, מה גם שהיא עצמה כתבה לא מעט בגנזך.
 
 לאחרונה אירי, אווה ואני עובדות יחד על [[אימא, סבתא ואני]], סיפורים מאת דנה הבובה, על חייה עם איריס, ביתה של אווה ואווה.</pre>
+</div>
+<div created="20170422193053700" modified="20170422202723586" tags="[[חלומות שחלמנו]]" title="אוטו מטריה">
+<pre>[img[pictures/oto-mitriya.jpg]]
+
+!!![[אירי]]:
+
+בילדותי, המרחק מבית הורי לבית הספר היסודי, היה משהו כמו 400 מטרים, הכוללים שלוש פניות.
+
+בקיץ זו לא הייתה בעיה, וגם היו לי אופניים, אבל בחורף תמיד חלמתי שיש לי אוטו-תלת אופן, עם כיסוי בצורת מטריה ענקית שקופה.
+</pre>
+</div>
+<div created="20170422140632892" modified="20170422211643736" tags="[[המטבח עפ&quot;י ז'נבייב]]" title="אוכל">
+<pre>[img[pictures/genevieve-food.jpg]]
+
+!!![[ז'נבייב]]:
+
+אני לא שפית ואין לי יומרה כזו. אני בסך הכל בת למהגרים ממרוקו, שניסתה להיות ילדה טובה, והלכה ולמדה ראיית חשבון, ונישאה לגבר שנראה היה ראוי, והפכה לאם לשתי בנות. אביה נפטר, היא התגרשה ובעזרת אימה היקרה פתחה את [[הקוסקוס]].
+
+אני אוהבת להכין אוכל פשוט מהבחינה הזו, שהוא לא מורכב, ואני אוהבת גם לאכול בחוץ.
+
+לחם, [[חמאת שום ועשבי תיבול]], גבינות, סלט, [[ירקות קלויים]], ירקות צרובים, איזה דרניק וקפה לקינוח - בעיני זה הכי.
+
+
+
+
+
+
+</pre>
 </div>
 <div created="20170402173414658" modified="20170404203744152" tags="[[מתכוני ארוחת הכריסמס]]" title="אורז לבן עם צנוברים">
 <pre>[img[pictures/orez-lavan-matconim.jpg]]
@@ -9703,7 +9743,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אנה, שמספרתה נמצאת בקומה הראשונה של [[געזונטהייטס]], והיא אישה נשואה (מאוד) הרבה שנים. היא אמא. היא מתקנת הכל, היא תחמנית, היא נשית, היא האישה האולטימטיבית, ומי שהכי מזכירה אותה היא ז'נבייב. ה-K סיסטרס לא סובלות אותה.</pre>
 </div>
-<div created="20161213170938039" modified="20170418160118585" title="הקוסקוס">
+<div created="20161213170938039" modified="20170422212427678" title="הקוסקוס">
 <pre>[img[pictures/hacouscous.jpg]]
 
 !!![[אלפרד]]:
@@ -9711,12 +9751,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 אל הקוסקוס, שזה בעצם &quot;שה ז'נבייב&quot; נכנסים מהדלת הראשית לפרוזדור קצר, שמשמאלו חלון ודלת המטבח, ובסופו חדר שמכיל עשרה שולחנות קטנים.
 באם פונים ממנו ימינה מגיעים למשרד או לשרותים או לחצר קטנה ומרוצפת, שבימים החמים מוסיפה עוד שבעה שולחנות למסעדה.
 
-כשהיא נכנסה למסעדה, לפני כמה שנים, חברים שלה המליצו לה על חבורה של [[חמישה סינים|הסינים]] צעירים לשיפוץ.
+[[כשהיא|ז'נבייב]] נכנסה למסעדה, לפני כמה שנים, חברים שלה המליצו לה על חבורה של [[חמישה סינים|הסינים]] צעירים לשיפוץ.
 
 נכון לעכשיו עובדים שם: [[סוניה]], [[יויו]], [[דןדן]], [[אירי]] [[ודניאל|דניאל]], אך [[גורה]] היא זו שדרכה הכרנו כולנו את [[ז'נבייב]].
-גם אותי גורה לקחה לאכול שם בתקופה שהיינו יחד.
+גם אותי גורה לקחה [[לאכול|אוכל]] שם בתקופה שהיינו יחד.
 
-הקוסקוס הוא מסוג המקומות, שלאחר שאתה מסיים לאכול בהם, אתה רווי נחת, ומלקק את השפתיים משך כל היום ונזכר בטעם הטעים.
+הקוסקוס הוא מסוג המקומות, שלאחר שאתה מסיים לאכול בהם, אתה רווי נחת, ומלקק את השפתיים משך כל היום כדי להיזכר בטעם.
 
 בתקופה הלא ארוכה במיוחד בה [[כולנו מכירים את כולנו|האחיות כהן]], ז'נבייב [[ואבי|ג'וזף אברואה]] הפכו לזוג אוהבים, כך ש[[במשק האוטרקי שלנו|המשק האוטרקי שלנו]], לא רק שיש לנו גם מסעדה, יש לי אימא חורגת מהסוג שאין באגדות.
 
@@ -9755,7 +9795,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 גם הסטודנטית השביעית משמאל בשורת הבנות של המקהלה מוצאת חן בעיני. עלמה יפהפייה שהייתה יכולה בקלות להיות מלוהקת לאחת מההפקות על פי אחד מספריה של ג'יין אוסטין. עיניה נעות בין מחברת הטקסט שמונחת בידיה לבין המנצח ששר בלי קול. אני נעה בין מסמך הוורד לווידאו, מידי פעם מביטה בנוף העיר. קר, אך אני לבושה היטב. הרוח הקרה מוסיפה לדרמה שבתמונה בה אני נמצאת כעת. אצבעותיו הארוכות של עלם האורגן נעות ברכות על הקלידים, ואני חושבת על כך, שאין לדעת מה מסתתר מאחורי הפנים התמימים והיפים הללו של העלמה השרה את המוסיקה של פורה המיוסר. צווארה הארוך וגופה נראים ככלי שרת זך לקולה, שערה החלק והבהיר אסוף לאחור ברישול, ושפתי הלב שלה שרות In Paradisum. רגע הריחוף שלאחר השחרור. עיניה הירוקות נפערות וחיוך צדי עולה על שפתיה ואני שרה: בגן עדן, ילד מתוק שלי, הגעת, אלי, לידי, לחיקי, לבי, כאן בקודש, גולה תמיד. סגרתי את חלון היו טיוב לפני שהחלו מחיאות הכפיים, והסרתי מעלי את האוזניות. צומת סואן המה בראשי ויותר מכול נמלאתי עצב מכך, שמה שראיתי כשהבטתי על עצמי באופן לא מעורב ככל שאפשר, כמו ש[[רוז'ה]] לימד אותנו, זה עד כמה אני זקוקה לאהבה. הכנסתי את המחשב והאוזניות לתיק הגב. </pre>
 </div>
-<div created="20161112221314170" modified="20170417201724384" tags="[[אחות כהן]]" title="ז'נבייב">
+<div created="20161112221314170" modified="20170422214805109" tags="[[אחות כהן]]" title="ז'נבייב">
 <pre>[img[pictures/genevieve.jpg]]
 
 !!![[המתוקה]]
@@ -9781,7 +9821,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 היא חתולה יפה שמשפחתה היגרה ממרוקו לפריז.
 
-היא אוהבת ודואגת לכולנו. בסוף כל יום עבודה היא עוברת ובודקת שהכל במקום. היא סומכת על כולנו ובכל זאת במהירות היא מציצה לכל הפינות למרות שהיא יודעת שהסמרטוטים שבידינו לא יפספסו אף סמ&quot;ר. ואולי, פתאום אני חושב, היא פשוט רווה נחת ברגעים הללו, אחרי שסיימה לספור את  הקופה, ולדעת שלא לחינם למדה ראיית חשבון.</pre>
+היא [[אוהבת|אהבה]] ודואגת לכולנו. בסוף כל יום עבודה היא עוברת ובודקת שהכל במקום. במהירות היא מציצה לכל הפינות למרות שהיא יודעת שהסמרטוטים שבידינו לא יפספסו אף סמ&quot;ר. ואולי, פתאום אני חושב, היא פשוט רווה נחת, אחרי שסיימה לספור את  הקופה, ולדעת [[שלא לחינם למדה ראיית חשבון|אוכל]].</pre>
 </div>
 <div created="20170411155118410" modified="20170412203304600" tags="[[מתכוני ארוחת הכריסמס]]" title="חזרת">
 <pre>[img[pictures/chazeret.jpg]]
@@ -9803,6 +9843,38 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * מרסקים את הסלק על פומפיה דקה
 * מתבלים ומערבבים
 * שומרים במקרר בצנצנת סגורה</pre>
+</div>
+<div created="20170422183732891" modified="20170422202411597" tags="[[חלומות שחלמנו]]" title="חלומות שחלמנו">
+<pre>[img[pictures/chalomot-shechalamnoo.jpg]]
+
+!!![[יויו]]:
+
+תמיד חלמתי להיות [[מפקח נקיון במטבח של מסעדה|מנקים היטב]], אבל מה שעוד יותר יפה, זה שמימוש החלום הזה הביא לי עוד חלומות:
+
+* למשל [[המפעיל יד|מפעיל יד]],שטרם קרה.
+* [[תיק הגב|תיקי גב לקניות שדןדן ויויו הכינו]] עליו חשבתי כמה ימים אחרי שעברנו [[לדירה|הדירה]], ונגנבתי על ההליכה לשוק.
+* [[האוטו-מטריה|אוטו מטריה]] של אירי.
+
+</pre>
+</div>
+<div created="20170422160814236" modified="20170422162357443" tags="[[המטבח עפ&quot;י ז'נבייב]]" title="חמאת שום ועשבי תיבול">
+<pre>[img[pictures/genevieve-green-butter.jpg]]
+
+!!![[ז'נבייב]]:
+
+לכמות ביתית אפשר להכין:
+
+* 400 גרם חמאה רכה
+* צרור פטרוזיליה
+* שתי שיני שום
+* כפית מלח ים גס
+
+מכניסים את כל החומרים למעבד המזון עם להב הפלדה, ומפעילים עד לקבלת תערובת אחידה,
+
+ יוצקים לתוך כלי בגודל מתאים, מרופד בגיליון נייר אפייה, עוטפים יפה עם שולי הנייר. 
+
+כשחם כדאי לשמור במקרר.
+</pre>
 </div>
 <div created="20170412203708355" modified="20170412223649148" tags="[[מתכוני ארוחת הכריסמס]]" title="חמוצים סיניים">
 <pre>[img[pictures/chamoozim-sinim.jpg]]
@@ -9854,6 +9926,29 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 <div created="20161030110441328" modified="20161213205302809" title="ים טתיס">
 <pre>[img[pictures/ccDpGp3IHg5hAMCR.JPG]]
 מאגר גז שכל התפוקה העתידית שלו נמכרה לגורם שמעדיף להישאר בעילום שם תמורת הזכות לפתח את [[מרינה זוטו]] ו[[געזונטהייטס]] בתור נכסי [[דיור מוגז]].</pre>
+</div>
+<div created="20170422205250692" modified="20170422215212898" tags="[[המטבח עפ&quot;י ז'נבייב]]" title="ירקות קלויים">
+<pre>[img[pictures/yerakot-klooim.jpg]]
+
+!!![[ז'נביב]]:
+
+ירקות קלויים, זה טעים, דל קלוריות יחסית, וקל ממש להכנה.
+
+זה מאד נח להכין בתנור, על אף שההבדל בין חציל או פלפל קלויים על האש לעומת כאלה קלויים בתנור, זה כמו ההבדל בין חתול בר לחתול בית.
+
+ירקות קלויים בתנור זה לא מלכלך.
+
+בטטות, תפוי אדמה, סלק, שומר, קולורבי, בצל - פורסים, מתבלים בשמן זית ומלח גס, עשבי תיבול, שום
+
+אופים בהתחלה בחום בינוני נמוך, וכעבור שעה מעלה ל-200 מעלות, עד שהם בצבע הנכון לטעמינו.
+
+חציל ופלפל - אפשר לאפות שלמים ולטפל בהם לאחר שנאפו היטב.
+
+מהחציל המוכן מוציאים את הבשר לקערה, ומתבלים בשמן זית, מלח ים גס ופלפל שחור גרוס.
+
+לאחר שהפלפל התקרר, מסננים את הנוזל שבתוכו, מסירים את הקליפה והגרעינים, ומסדרים על צלחת, מערבבים את המיץ המסונן עם שמן זית, יוצקים את הנוזל מעל, ומפזרים מלח  גס.
+
+</pre>
 </div>
 <div created="20161113182253178" modified="20170125165615268" title="כוכב המשאלות בעל תשע הצלעות">
 <pre>[img[https://i.imgur.com/AMt3Qfp.jpg]]
@@ -10675,15 +10770,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170114175718512" modified="20170119231713074" title="מנקים היטב">
-<pre>[img[pictures/1ncB2wNUFiRbjmuU.jpg]]
+<div created="20170114175718512" modified="20170422214900680" tags="[[המטבח עפ&quot;י ז'נבייב]]" title="מנקים היטב">
+<pre>[img[pictures/menakim-heytev.jpg]]
 
 !!![[ז'נבייב]]:
 
-רק כמה ימים אחרי שיויו התחיל לעבוד אצלי, בסוף יום העבודה, כשניקינו את המסעדה, שמתי לב שכאשר הוא הופך את הכסאות על השולחנות הנקיים לקראת שטיפת הרצפה, הוא מנקה את תחתיות רגליהם. 
+כמה ימים אחרי שיויו התחיל לעבוד אצלי, בסוף יום העבודה, כשניקינו את המסעדה, שמתי לב שכאשר הוא הופך את הכסאות על השולחנות הנקיים לקראת שטיפת הרצפה, הוא מנקה את תחתיות רגליהם. 
 מראה מפעים ומעורר השראה.
 
-ביקשתי מיויו להפוך למפקח על הנקיון, והוא קיבל בשמחה את הג'וב.
+ביקשתי מיויו להפוך [[למפקח על הנקיון|חלומות שחלמנו]], והוא קיבל בשמחה את הג'וב.
 
 בזכות יויו, במטבח של &quot;שה ז'נבייב&quot;, כולנו מנקים היטב.
 
@@ -10704,6 +10799,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 הם שמים דגש על הצילומים והעיצוב.
 
 בקצה החלל הפתוח יש חדר אוכל צבעוני, גם בו נוהגים העובדים לשבת ולעבוד.</pre>
+</div>
+<div created="20170422190532804" modified="20170422212125863" tags="[[חלומות שחלמנו]]" title="מפעיל יד">
+<pre>[img[pictures/mafil-yad.jpg]]
+
+!!![[יויו]]:
+
+מאז שהפכתי [[למפקח נקיון בקוסקוס|מנקים היטב]], אני חולם על מתקן קטן וממונע, שיושב על שורש כף היד כמו שעון, וכשמפעילים אותו היד נעה, ויש ארבע אפשרויות:
+
+במעגלים חלש, במעגלים חזק, קדימה ואחורה חלש וקדימה ואחורה חזק.</pre>
 </div>
 <div created="20170223175057546" modified="20170417151442577" title="מקלדת">
 <pre>[img[pictures/mikledet.jpg]]
@@ -11351,9 +11455,8 @@ __אופן ההכנה____
 <div created="20170324140205427" modified="20170417190916651" tags="[[אחות כהן]]" title="פה">
 <pre>[img[pictures/zYSyawODRSpsQ3mx.jpg]]</pre>
 </div>
-<div created="20170419212629057" modified="20170421140736044" title="פוליטיקאי">
-<pre>
-[img[pictures/politician.jpg]]
+<div created="20170419212629057" modified="20170422130340042" title="פוליטיקאי">
+<pre>[img[pictures/politician.jpg]]
 
 
 !!![[גורה]]:
@@ -11422,7 +11525,7 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20170401151233604" modified="20170417190719255" tags="[[אחות כהן]]" title="פיליפ">
+<div created="20170401151233604" modified="20170422143844387" tags="[[אחות כהן]]" title="פיליפ">
 <pre>[img[pictures/phillip.jpg]]
 
 !!![[גורה]]:
@@ -11443,11 +11546,16 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20170417192958980" modified="20170417193702979" tags="[[אחיות חוץ]]" title="פיליפ סימור הופמן">
+<div created="20170417192958980" modified="20170422204002211" tags="[[אחיות חוץ]]" title="פיליפ סימור הופמן">
 <pre>[img[pictures/Philip-Seymour-Hoffman.jpg]]
 
+!!![[יויו]]:
 
-[[פיליפ ז&quot;ל|https://he.wikipedia.org/wiki/%D7%A4%D7%99%D7%9C%D7%99%D7%A4_%D7%A1%D7%99%D7%9E%D7%95%D7%A8_%D7%94%D7%95%D7%A4%D7%9E%D7%9F]]</pre>
+נכון שהוא היה חור תחת בניחוח אישה ובביג לובובסקי, אבל הוא גם היה אומן  בטרומן קפוטה ובסינקדוכה ניו- יורק. 
+
+אוהב אותו
+
+[[פיליפ ז&quot;ל|https://he.wikipedia.org/wiki/%D7%A4%D7%99%D7%9C%D7%99%D7%A4_%D7%A1%D7%99%D7%9E%D7%95%D7%A8_%D7%94%D7%95%D7%A4%D7%9E%D7%9F]].</pre>
 </div>
 <div created="20170405154213420" modified="20170405180055892" tags="[[מתכוני ארוחת הכריסמס]]" title="פלפלים קלויים">
 <pre>[img[pictures/pilpelim.jpg]]
@@ -12095,7 +12203,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170405141252134" modified="20170405142919518" title="תיקי גב לקניות שדןדן ויויו הכינו">
+<div created="20170405141252134" modified="20170422201859875" tags="[[חלומות שחלמנו]]" title="תיקי גב לקניות שדןדן ויויו הכינו">
 <pre>[img[pictures/tik-kniyot.jpg]]
 
 !!![[גורה]]:
