--- a/index.html
+++ b/index.html
@@ -8336,7 +8336,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="[[פיליפ סימור הופמן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11546,16 +11546,16 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20170417192958980" modified="20170422204002211" tags="[[אחיות חוץ]]" title="פיליפ סימור הופמן">
+<div created="20170417192958980" modified="20170422220031801" tags="[[אחיות חוץ]]" title="פיליפ סימור הופמן">
 <pre>[img[pictures/Philip-Seymour-Hoffman.jpg]]
 
 !!![[יויו]]:
 
-נכון שהוא היה חור תחת בניחוח אישה ובביג לובובסקי, אבל הוא גם היה אומן  בטרומן קפוטה ובסינקדוכה ניו- יורק. 
+נכון שהוא היה חור תחת בניחוח אישה ובביג לובובסקי, אבל הוא עשה את זה טוב, והוא גם היה בסינקדוכה ניו- יורק. 
 
-אוהב אותו
+אוהב אותו כאחות,
 
-[[פיליפ ז&quot;ל|https://he.wikipedia.org/wiki/%D7%A4%D7%99%D7%9C%D7%99%D7%A4_%D7%A1%D7%99%D7%9E%D7%95%D7%A8_%D7%94%D7%95%D7%A4%D7%9E%D7%9F]].</pre>
+את [[פיליפ ז&quot;ל|https://he.wikipedia.org/wiki/%D7%A4%D7%99%D7%9C%D7%99%D7%A4_%D7%A1%D7%99%D7%9E%D7%95%D7%A8_%D7%94%D7%95%D7%A4%D7%9E%D7%9F]].</pre>
 </div>
 <div created="20170405154213420" modified="20170405180055892" tags="[[מתכוני ארוחת הכריסמס]]" title="פלפלים קלויים">
 <pre>[img[pictures/pilpelim.jpg]]
